--- a/pom.xml
+++ b/pom.xml
@@ -2,37 +2,46 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
+        <version>2.3.2.RELEASE</version>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <packaging>pom</packaging>
+
     <groupId>com.leyunone</groupId>
     <artifactId>god-search</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>god-search</name>
-    <description>Demo project for Spring Boot</description>
+    <description>上帝引擎-V1.0.0</description>
+
     <properties>
         <java.version>8</java.version>
+        <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
 
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <modules>
+        <module>god-search-common</module>
+        <module>god-search-core</module>
+    </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.leyunone</groupId>
+                <artifactId>god-search-common</artifactId>
+                <version>${version}</version>
+            </dependency>
+            <!-- spring boot 依赖 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
