[init]新增 god-search-social \ god-search-sample 模块 开始开发计划

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>god-search-common</module>
         <module>god-search-core</module>
         <module>god-search-app</module>
+        <module>god-search-social</module>
     </modules>
 
     <dependencyManagement>
